# cplab_cact_25

./: .gitignore  CMakeLists.txt  ast_generator.cpp  ast_generator.h  compile_the_test.sh  do0.ps1  do1.ps1  do2.ps1  docompile.sh  dotest.sh  local_compile.ps1  output.ll  static_check.cpp  static_check.h  syntax_error_listener.cpp  syntax_error_listener.h  test.asm  test.s  test_exe  test_executable.sh  variable_scope_generator.h
grammar/: CplabLexer.cpp  CplabLexer.g4  CplabLexer.h  CplabLexer.interp  CplabLexer.tokens  CplabParser.cpp  CplabParser.g4  CplabParser.h  CplabParser.interp  CplabParserBaseVisitor.cpp  CplabParserBaseVisitor.h  CplabParserVisitor.cpp  CplabParserVisitor.h
grammar/.antlr/: CplabLexer.java  CplabLexer.tokens  CplabParser.java  CplabParserBaseListener.java  CplabParserListener.java
mini-llvm/: CMakeLists.txt
mini-llvm/apps/: dot-cfg.cc  rv64i.cc  (+2 more)
mystl/: CMakeLists.txt
output/: 00_true_main.cact.txt  02_true_octo.cact.txt  04_true_multi_dim_array.cact.txt  12_true_comment.c.txt  12_true_comment.cact.txt  14_true_sample.cact.txt  15_true_syntax_false_semantic.cact.txt  17_true_multi_dim_fparam.cact.txt  19_false_val_init.cact.txt  20_false_val_init_op.cact.txt  22_true_func.cact.txt  23_false_val_init_func.cact.txt  26_true_multi_dim_const.cact.txt  my_test.cact.txt
src/: ast_generator.cpp  ast_generator.h  basic_type.h  ir_generator.cpp  ir_generator.h  main.cpp  mylib.c  static_check.cpp  static_check.h  syntax_error_listener.cpp  syntax_error_listener.h  variable_scope_generator.cpp  variable_scope_generator.h
test/: my_test.cact
(+113 files in other folders)
